@@ -369,7 +369,7 @@ static boolean ReadGenericProfile(j_decompress_ptr jpeg_info)
   /*
     Do special checks for either Exif data or Adobe XMP
   */
-  length=image->generic_profile[i].length;
+  length=(long) image->generic_profile[i].length;
   p=image->generic_profile[i].info;
   if ((marker==1) && (length>4) && (strncmp((char *) p,"Exif",4) == 0))
     FormatString(image->generic_profile[i].name,"EXIF");
